# research

./: .gitignore  README.md
gensim_tutorial/: Makefile  docker-compose.yml
nlp_tutorial/: Dockerfile  Makefile
recommendation/: Dockerfile  Makefile  pyproject.toml
recommendation/.jupyter/: jupyter_notebook_config.py
recommendation/.jupyter/lab/: shortcuts.jupyterlab-settings
recommendation/notebooks/: BayesianPersonalizedRanking.ipynb  MatrixFactorization.ipynb  main.ipynb
template/: Dockerfile  Makefile  pyproject.toml
