[tool.poetry]
name = "nlp_tutorial"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.21.3"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
watermark = "^2.2.0"
tqdm = "^4.62.3"
jupyterlab-code-formatter = "^1.4.10"
black = "^21.12b0"
isort = "^5.10.1"
jupyterlab-tabnine = "^0.0.24"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
